# QML-VPN

./: CMakeLists.txt  Main.qml  main.cpp
QML/Body/: Body.qml  StartButton.qml  serverSelectingButton.qml
QML/InfoPages/: About.qml  InfoPage.qml.autosave
QML/InfoPages/JS/: AboutLetter.js
QML/LeftRect/: Buttons.qml  LeftRect.qml  Left_Sub_Buttom.qml
QML/Settings/: LanguagesList.qml  RightArrow.qml  Settings.qml  SettingsTopBar.qml  Switcher.qml
QML/Settings/JS/: Settings.js
resources/: resources.qrc
src/: useravatar.cpp  useravatar.h
src/networking/: networking.cpp  networking.h
src/settings/: settings.cpp  settings.h
src/useravatar/: useravatar.cpp  useravatar.h
